--- a/css/florents-fabulous-project-d336d2.webflow.css
+++ b/css/florents-fabulous-project-d336d2.webflow.css
@@ -906,8 +906,7 @@ p {
 }
 
 .privacy-section {
-  padding-right: 3%;
-  padding-left: 3%;
+  padding: 3%;
 }
 
 @media screen and (max-width: 991px) {
