--- a/css/florents-fabulous-project-d336d2.webflow.css
+++ b/css/florents-fabulous-project-d336d2.webflow.css
@@ -924,6 +924,99 @@ p {
   color: #fff;
 }
 
+.accordion-item {
+  margin-bottom: 20px;
+  padding: 24px 30px 14px;
+  border-radius: 10px;
+  box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.03);
+}
+
+.content-wrapper {
+  max-width: 1140px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.content-wrapper.slim {
+  max-width: 940px;
+}
+
+.accordion-wrapper {
+  margin-top: 50px;
+}
+
+.icon-2.accordion-icon {
+  font-family: Materialicons, sans-serif;
+  color: #fff;
+  font-size: 32px;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.accordion-item-trigger {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  color: #fff;
+}
+
+.header-center-box {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.header-center-box._75 {
+  width: 75%;
+}
+
+.accordion-heading {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.accordion-item-content {
+  overflow: hidden;
+  margin-top: 10px;
+  margin-right: 30px;
+}
+
+.section-faq {
+  padding: 150px 30px;
+}
+
+.heading {
+  color: #fff;
+}
+
 @media screen and (max-width: 991px) {
   .container-navigation {
     position: relative;
@@ -1100,6 +1193,10 @@ p {
   .nav-menu-2 {
     background-color: #070e27;
   }
+
+  .accordion-item-content {
+    margin-right: 0px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1160,6 +1257,14 @@ p {
     padding-top: 82px;
     padding-bottom: 82px;
   }
+
+  .header-center-box._75 {
+    width: 90%;
+  }
+
+  .section-faq {
+    padding: 100px 15px;
+  }
 }
 
 #w-node-_464420cf-ab78-4572-dda2-b91773b308ca-1655b22f {
@@ -1192,3 +1297,10 @@ p {
   }
 }
 
+@font-face {
+  font-family: 'Materialicons';
+  src: url('../fonts/MaterialIcons-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
